--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -4,3 +4,4 @@
 
 <%= link_to "Edit Project", edit_project_path(@project) %>
 <%= link_to "Delete Project", project_path(@project), method: :delete, data: { confirm: "Are you sure you want to delete this project?" } %>
+<%= link_to "New Ticket", new_project_ticket_path(@project) %>
